<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_road"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        style="@style/screen_margin"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="20dp"
            android:src="@drawable/logo" />

        <com.bitscanvas.thehytt.utils.DroidSansTextView
            style="@style/auth_textview"
            android:text="@string/app_details" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/auth_divider_line">

        </LinearLayout>

        <com.bitscanvas.thehytt.utils.DroidSansTextView
            style="@style/auth_textview"
            android:text="@string/already_us" />

        <Button
            style="@style/auth_button"
            android:text="@string/app_login"
            android:onClick="onLogin"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/auth_divider_line">

        </LinearLayout>

        <Button

            style="@style/auth_button"
            android:text="@string/join_now"
            android:onClick="onJoin"/>

        <TextView
            style="@style/auth_textview"
            android:text="@string/new_user" />
    </LinearLayout>

</LinearLayout>
