<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.bitscanvas.thehytt.CustomLoginFragment">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="OR"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/circle"
             />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/errorLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        >

        <TextView
            android:id="@+id/txtErrorMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="@color/orange"
            android:textStyle="normal"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:gravity="center">

        <EditText
            android:id="@+id/edtMailId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/msgEmail"
            android:imeOptions="actionNext"
            android:inputType="text|textFilter"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="10dip"
        android:gravity="center">

        <EditText
            android:id="@+id/edtPassWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/msgPassword"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:layout_marginTop="10dip"
        android:gravity="center">

        <Button
            android:id="@+id/xBtnLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onSignIn"
            android:layout_marginRight="5dp"
            android:background="@color/googlePLus"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/btnSignIN" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onSingUp"
            android:layout_marginLeft="5dp"
            android:background="@color/googlePLus"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/btnSignUP" />
    </LinearLayout>

</LinearLayout>