<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_between_margin">

        <TextView
            android:id="@+id/errorDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/red"
            android:textSize="18sp"
            android:text="this is error message"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <AutoCompleteTextView
            android:id="@+id/edtDestination"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:hint="@string/msgDestination"
            android:imeOptions="actionNext"

            android:nextFocusDown="@+id/et_registercompany"
            android:singleLine="true" >
            <requestFocus/>
        </AutoCompleteTextView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="30dip"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="18" >



            <LinearLayout
                android:layout_width="1dip"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dip"
                android:background="@color/black"
                android:visibility="gone" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="17" >

                <Spinner
                    android:id="@+id/spinnerQuantity"
                    android:layout_width="0dp"
                    android:layout_height="0dp" />

                <Button
                    android:id="@+id/btnTimeValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="left|center"
                    android:hint="Select"
                    android:paddingLeft="10dip" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="1dip"
                android:layout_height="match_parent"
                android:layout_marginRight="10dip"
                android:background="@color/black"
                android:visibility="gone" >
            </LinearLayout>


        </LinearLayout>

        <EditText
            android:id="@+id/edtPrice"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:inputType="number"
            android:hint="@string/msgPrice"
            android:imeOptions="actionNext"
            android:singleLine="true" />

        <Button
            android:id="@+id/xBtnLogin"
            android:background="@color/dodgerblue"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:onClick="onSearchRides"
            android:text="@string/btnGo" />
    </LinearLayout>

</LinearLayout>