<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/layoutTop"
        android:layout_marginTop="20dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imgProfilePic"
            android:layout_width="100dip"
            android:layout_height="100dip"
            android:src="@mipmap/ic_launcher" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutMiddle"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layoutTop"
        android:layout_above="@+id/layoutBottom"
        android:layout_margin="30dip"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="top" >

        <TextView
            android:id="@+id/operationType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:layout_marginBottom="10dip"
            android:text="Journey Details"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">
            <TextView
                android:id="@+id/txtFromLable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_marginBottom="10dip"
                android:text="@string/labelFrom"
                android:textSize="14sp"
                android:layout_weight="7"
                android:textColor="@color/material_blue_grey_900"/>

            <TextView
                android:id="@+id/txtFromValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_marginBottom="10dip"
                android:layout_weight="3"
                android:text="koramangla" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">
            <TextView
                android:id="@+id/txtToLable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_marginBottom="10dip"
                android:text="@string/labelTo"
                android:textSize="14sp"
                android:layout_weight="7"
                android:textColor="@color/material_blue_grey_900"/>

            <TextView
                android:id="@+id/txtToValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_marginBottom="10dip"
                android:layout_weight="3"
                android:text="koramangla" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">
            <TextView
                android:id="@+id/txtDistanceLable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_marginBottom="10dip"
                android:text="@string/labelDistance"
                android:textSize="14sp"
                android:layout_weight="7"
                android:textColor="@color/material_blue_grey_900"/>

            <TextView
                android:id="@+id/txtDistanceValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_marginBottom="10dip"
                android:layout_weight="3"
                android:text="koramangla" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">
            <TextView
                android:id="@+id/txtPriceLable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_marginBottom="10dip"
                android:text="@string/labelprice"
                android:textSize="14sp"
                android:layout_weight="7"
                android:textColor="@color/material_blue_grey_900"/>

            <TextView
                android:id="@+id/txtPriceValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_marginBottom="10dip"
                android:layout_weight="3"
                android:text="150" />
        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutBottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnConform"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Conform"
            android:onClick="onConfirm"/>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Cancel"
            android:onClick="onCancel"/>
    </LinearLayout>

</RelativeLayout>